--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,31 +1,52 @@
 .card {
+    width: 300px;
+    background: #07182E;
+    position: relative;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    width: 300px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
     padding: 20px;
     margin-left: 15px;
-    margin-left: 15px;
+    place-content: center;
+    place-items: center;
+    overflow: hidden;
+    border-radius: 20px;
 }
 
-.card__title {
-    letter-spacing: 1px;
-    text-transform: capitalize;
-    margin: 0px;
-    font-size: 24px;
-    text-align: center;
-    font-weight: 700;
-    margin-bottom: 15px;
-    color: black;
+.card h3 {
+    z-index: 1;
+    color: white;
+    font-size: 2em;
 }
 
-.card__subtitle {
-    line-height: 1.5;
-    margin-bottom: 1.25rem;    
-    font-size: 18px;
-    font-weight: 700;
-    margin-bottom: 15px;
-    color: #118AB2;
+.card::before {
+    content: '';
+    position: absolute;
+    width: 240px;
+    background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
+    height: 130%;
+    animation: rotBGimg 3s linear infinite;
+    transition: all 0.2s linear;
+}
+
+@keyframes rotBGimg {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.card::after {
+    content: '';
+    position: absolute;
+    background: #07182E;
+    inset: 5px;
+    border-radius: 15px;
+}
+
+.card:hover:before {
+    background-image: linear-gradient(180deg, rgb(81, 255, 0), purple);
+    animation: rotBGimg 3.5s linear infinite;
 }
