--- a/src/components/Alert/Alert.module.css
+++ b/src/components/Alert/Alert.module.css
@@ -1,4 +1,13 @@
+:root {
+    --error: #e74c3c;
+}
+
 .alert {
+    padding: 10px;
+    background: #ffefef;
+    border: 1px solid var(--error);
     margin-top: 1rem;
-    color: #e74c3c;
+    color: var(--error);
+    border-radius: 4px;
+    margin: 20px 0;
 }
